--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.1.3",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
+    "redux-saga": "^1.2.3",
     "sass": "^1.69.5"
   },
   "devDependencies": {
