--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.1.3",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
+    "react-select": "^5.8.0",
     "redux-saga": "^1.2.3",
     "sass": "^1.69.5"
   },
