--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
     "react-select": "^5.8.0",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
     "sass": "^1.69.5"
   },
