--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prettier": "^3.1.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-pwa": "^0.17.2",
     "vite-plugin-svgr": "^3.2.0",
     "vitest": "^0.34.6"
   }
